Fix unwanted horizontal scrolling on resume page

--- a/resume/style.css
+++ b/resume/style.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=B612+Mono:700|Ubuntu+Mono&display=swap');
 
+html, body {
+    overflow-x: hidden;
+    position: relative;
+}
+
 body {
     font-family: 'Ubuntu Mono', monospace;
     line-height: 1.2;
+    height: 100%;
+    margin: 0;
     transition:         background-color 1000ms ease-in-out,
                         color 1000ms ease-in-out;
     -webkit-transition: background-color 1000ms ease-in-out,
